--- a/cypher-guard/Cargo.toml
+++ b/cypher-guard/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.21", features = ["extension-module"] }
+thiserror = "1.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
