--- a/cypher-guard/Cargo.toml
+++ b/cypher-guard/Cargo.toml
@@ -8,6 +8,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.21", features = ["extension-module"] }
 thiserror = "1.0"
+nom = "7"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
