--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-[package]
+[workspace.package]
 name = "cypher-guard"
 version = "0.1.0"
 edition = "2021"
@@ -9,12 +9,20 @@ members = [
     "rust/cypher_guard",
     "rust/python_bindings"
 ]
-[dependencies]
+[workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 pyo3 = { version = "0.21", features = ["extension-module"] }
 thiserror = "1.0"
 nom = "7"
 
-[lib]
-crate-type = ["cdylib", "rlib"]
+
+[profile.release]
+debug = 2
+lto = "thin"
+
+[profile.test.package.proptest]
+opt-level = 3
+
+[profile.test.package.rand_chacha]
+opt-level = 3
