--- a/rust/python_bindings/Cargo.toml
+++ b/rust/python_bindings/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+pyo3 = { version = "0.21", features = ["extension-module"] }
+cypher-guard = {path = "../cypher_guard" }
