--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-
-
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
@@ -14,7 +12,7 @@ members = [
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-pyo3 = { version = "<=0.18", features = ["extension-module"] }
+pyo3 = { version = "0.21.2", features = ["extension-module"] }
 thiserror = "1.0"
 nom = "7"
 
