--- a/rust/cypher_guard/Cargo.toml
+++ b/rust/cypher_guard/Cargo.toml
@@ -4,11 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-pyo3 = { version = "0.21", features = ["extension-module"] }
-thiserror = "1.0"
-nom = "7"
+nom.workspace = true
+thiserror.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+
+[features]
+default = ["python-bindings"]
+python-bindings = ["pyo3"]
+
+[dependencies.pyo3]
+workspace = true
+optional = true
 
 [lib]
 crate-type = ["cdylib", "rlib"]
