--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
+
 jobs:
   test:
     name: Test Rust Code
@@ -38,6 +41,4 @@ jobs:
     
     - name: Run tests
       run: cargo test --verbose
-    
-    - name: Run tests with all features
-      run: cargo test --all-features --verbose
+  
