feat: Implement Python bindings for Cypher Guard
- Add Python bindings using PyO3

- Set up proper project structure with pyproject.toml

- Implement schema loading and validation functions

- Add comprehensive test suite for valid and invalid queries

- Fix schema JSON format to match Rust struct requirements

- Add GitHub workflow for Python testing

- Update .gitignore for Python development

Next steps: Debug Cypher parser validation logic

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ node_modules/
 target/
 
 # Rust/Cargo
-# Cargo.lock
+Cargo.lock
 
 # Python
 __pycache__/
@@ -42,11 +42,30 @@ build/
 
 # Task files
 tasks.json
-tasks/ .cursor/mcp.json
+tasks/ 
 
-# AI
-.cursor/
-.roo
-.roomodes
-.taskmasterconfig
-.windsurfrules
+
+mcp.json
+# Python
+__pycache__/
+*.py[cod]
+*.class
+*.so
+.Python
+venv/
+ENV/
+.env
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.pytest_cache/
+.python-version
+poetry.lock
