--- a/rust/js_bindings/package.json
+++ b/rust/js_bindings/package.json
@@ -16,8 +16,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
     "@napi-rs/cli": "^2.16.5",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
+    "prettier": "^3.5.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@napi-rs/cli": "^2.16.0"
   }
-} 
+}
