--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ description = "A tool for validating Cypher queries against a Neo4j schema"
 resolver = "2"
 members = [
     "rust/cypher_guard",
-    "rust/python_bindings"
+    "rust/python_bindings",
+    "rust/js_bindings"
 ]
 [workspace.dependencies]
 serde = { version = "1.0", features = ["derive"] }
@@ -15,6 +16,8 @@ serde_json = "1.0"
 pyo3 = { version = "0.21.2", features = ["extension-module"] }
 thiserror = "1.0"
 nom = "7"
+napi = { version = "2.14.1", features = ["napi4"] }
+napi-derive = "2.14.1"
 
 [profile.release]
 debug = 2
