--- a/rust/js_bindings/Cargo.toml
+++ b/rust/js_bindings/Cargo.toml
@@ -9,6 +9,9 @@ crate-type = ["cdylib"]
 [dependencies]
 napi = { version = "2.14.1", features = ["napi4"] }
 napi-derive = "2.14.1"
-cypher_guard = { path = "../cypher_guard" }
+cypher-guard = { path = "../cypher_guard" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0" 
+serde_json = "1.0"
+
+[build-dependencies]
+napi-build = "2" 
