--- a/rust/cypher_guard/Cargo.toml
+++ b/rust/cypher_guard/Cargo.toml
@@ -3,20 +3,21 @@ name = "cypher-guard"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "cypher_guard"
+crate-type = ["cdylib", "rlib"]
+
+[features]
+default = []
+python-bindings = ["pyo3", "pyo3/extension-module"]
+
 [dependencies]
 nom.workspace = true
 thiserror.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 
-[features]
-default = []
-python-bindings = ["dep:pyo3"]
-
 [dependencies.pyo3]
 workspace = true
 optional = true
-
-[lib]
-name = "cypher_guard"
-crate-type = ["cdylib", "rlib"]
+features = ["macros"]
