--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,13 +34,13 @@ jobs:
       run: cargo fmt --all -- --check
     
     - name: Lint with clippy
-      run: cargo clippy -- -D warnings
+      run: cd rust/cypher_guard && cargo clippy -- -D warnings
     
     - name: Build
-      run: cargo build --verbose
+      run: cd rust/cypher_guard && cargo build --verbose
     
     - name: Run tests
-      run: cargo test --verbose
+      run: cd rust/cypher_guard && cargo test --verbose
 
   test-python:
     name: Test Python Bindings
