feat: migrate from Poetry to uv and rewrite validation logic
- Migrate Python dependency management from Poetry to uv
- Update pyproject.toml to use PEP 621 format with dependency-groups
- Update Makefile to use uv sync and uv run commands
- Update README.md with uv installation and usage instructions
- Rewrite validation logic with clean set-based approach in validation.rs
- Fix schema format in tests to use simplified type format
- Add uv.lock file for dependency locking
- Remove legacy requirements_dev.txt and poetry.lock files
- All Python bindings build and test successfully with new workflow

--- a/rust/python_bindings/pyproject.toml
+++ b/rust/python_bindings/pyproject.toml
@@ -1,11 +1,18 @@
-[tool.poetry]
+[project]
 name = "cypher_guard"
 version = "0.1.0"
 description = "Python bindings for Cypher Guard"
-authors = ["Your Name <your.email@example.com>"]
 
-[tool.poetry.dependencies]
-python = "^3.8"
+dependencies = []
+requires-python = ">=3.8"
+
+[dependency-groups]
+dev = [
+    "pytest>=7.0",
+    "maturin>=1.4,<2.0",
+    "testcontainers>=3.7",
+    "neo4j>=5.0"
+]
 
 [build-system]
 requires = ["maturin>=1.4,<2.0"]
