feat: Add custom exception types and schema field exposure for Python bindings
- Add custom exception classes for each validation error variant
- Map Rust validation errors to specific Python exceptions
- Add #[pyo3(get)] attributes to schema struct fields behind python-bindings feature
- Update Python tests to catch specific exception types
- Fix formatting and code organization
- Schema fields now properly exposed to Python (name, neo4j_type, etc.)
- Custom exceptions now raised correctly from Rust validation logic

--- a/rust/python_bindings/pyproject.toml
+++ b/rust/python_bindings/pyproject.toml
@@ -12,7 +12,7 @@ dev = [
     "maturin>=1.4,<2.0",
     "testcontainers>=3.7",
     "neo4j>=5.0",
-    "neo4j-graphrag>=1.8.0"
+    "neo4j-graphrag>=1.8.0",
 ]
 
 [build-system]
