--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       run: cargo fmt --all -- --check
     
     - name: Lint with clippy
-      run: cd rust/cypher_guard && cargo clippy -- -D warnings -A clippy::uninlined_format_args
+      run: cd rust/cypher_guard && cargo clippy --features python-bindings -- -D warnings -A clippy::uninlined_format_args
     
     - name: Build
       run: cd rust/cypher_guard && cargo build --verbose
