--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
       run: cd rust/cypher_guard && cargo clippy --features python-bindings -- -D warnings -A clippy::uninlined_format_args
     
     - name: Build
-      run: cd rust/cypher_guard && cargo build --verbose
+      run: cd rust/cypher_guard && cargo build --features python-bindings --verbose
     
     - name: Run tests
-      run: cd rust/cypher_guard && cargo test --verbose
+      run: cd rust/cypher_guard && cargo test --features python-bindings --verbose
 
   test-python:
     name: Test Python Bindings
