Fix Python bindings build issues
- Fix PyO3 attribute compilation errors in schema.rs by changing from cfg_attr to direct pyo3 attributes
- Fix 'DateTime' vs 'DATE_TIME' property type mismatch in test files
- Update Python bindings dependencies and configuration
- Ensure Python bindings build successfully with maturin

--- a/rust/python_bindings/Cargo.toml
+++ b/rust/python_bindings/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 cypher-guard = { path = "../cypher_guard", features = ["python-bindings"] }
-pyo3 = { workspace = true, features = ["extension-module"] }
+pyo3 = { workspace = true, features = ["extension-module", "macros"] }
 
 [build-dependencies]
 pyo3-build-config = "0.21.2"
