feat: implement CALL clause support with subqueries and procedure calls
- Add CALL clause parsing for subqueries: CALL { MATCH (p) RETURN p }
- Add CALL clause parsing for procedure calls: CALL db.labels()
- Support YIELD clause in procedure calls
- Enhance return_item to handle function calls with AS aliases
- Add clause boundary detection to prevent over-consuming input
- Update clause order validation to support CALL clauses
- Add comprehensive test coverage for CALL clauses
- Fix all Clippy warnings and clean up code
- Update .gitignore to exclude Python virtual environments and cache files

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ coverage.xml
 poetry.lock
 tasks/
 scripts/
+
+# Jupyter Notebooks
+_.ipynb
+
+# Python virtual environments (specific to this project)
+rust/python_bindings/.venv/
