Fix wheel platform tags for PyPI compatibility - Add manylinux 2_34 configuration to maturin - Update workflow to use correct maturin build flags

--- a/rust/python_bindings/pyproject.toml
+++ b/rust/python_bindings/pyproject.toml
@@ -49,4 +49,6 @@ build-backend = "maturin"
 
 [tool.maturin]
 python-source = "src"
-module-name = "cypher_guard" 
+module-name = "cypher_guard"
+manylinux = "2_34"
+targets = ["cp39", "cp310", "cp311", "cp312"] 
