--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -6,6 +6,8 @@ on:
 
 env:
   PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
+  MATURIN_BUILD_ARGS: "--manylinux 2_34"
+  CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER: "x86_64-linux-gnu-gcc"
 
 jobs:
   publish-python:
@@ -49,7 +51,18 @@ jobs:
       run: cd rust/python_bindings && uv sync
     
     - name: Build Python bindings
-      run: cd rust/python_bindings && uv run maturin build --release --manylinux 2_34
+      run: |
+        cd rust/python_bindings
+        uv run maturin build --release --manylinux 2_34 --target x86_64-unknown-linux-gnu
+        # Verify only manylinux wheels were created
+        ls -la ../../target/wheels/
+    
+    - name: Clean non-manylinux wheels
+      run: |
+        # Remove any wheels that don't have manylinux in the name
+        find target/wheels/ -name "*.whl" ! -name "*manylinux*" -delete
+        echo "Wheels after cleanup:"
+        ls -la target/wheels/
     
     - name: Publish to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
