--- a/rust/python_bindings/Cargo.toml
+++ b/rust/python_bindings/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cypher_guard_python_bindings"
-version = "0.1.12"
+version = "0.1.13"
 edition = "2021"
 
 [lib]
@@ -8,8 +8,9 @@ name = "cypher_guard"
 crate-type = ["cdylib"]
 
 [dependencies]
-cypher-guard = { path = "../cypher_guard", features = ["python-bindings"] }
+cypher-guard = { path = "../cypher_guard" }
 pyo3 = { workspace = true, features = ["extension-module", "macros"] }
+serde_json = "1.0"
 
 [build-dependencies]
 pyo3-build-config = "0.21.2"
