Fix CI wheel installation conflicts
The issue was that maturin was building multiple wheel files with different platform tags:
- cypher_guard-0.1.13-cp311-cp311-linux_x86_64.whl
- cypher_guard-0.1.13-cp311-cp311-manylinux_2_34_x86_64.whl

When using wildcard patterns like 'cypher_guard-*-cp*-*.whl', uv saw conflicting URLs for the same package.

Fixed by:
- Using 'find' command to get the first matching wheel file
- Installing that specific wheel instead of using wildcards
- Applied fix to ci.yml, release.yml, and publish-pypi.yml

This resolves the 'Requirements contain conflicting URLs' error.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,8 @@ jobs:
       run: |
         cd rust/python_bindings
         uv run maturin build --release
-        uv pip install --force-reinstall ../../target/wheels/cypher_guard-*-cp*-*.whl
+        WHEEL_FILE=$(find ../../target/wheels/ -name "cypher_guard-*-cp*-*.whl" | head -1)
+        uv pip install --force-reinstall "$WHEEL_FILE"
     
     - name: Run Python tests
       run: cd rust/python_bindings && uv run pytest tests/ -vv
