--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -55,7 +55,8 @@ jobs:
         cd rust/python_bindings
         uv run maturin build --release --manylinux 2_34 --target x86_64-unknown-linux-gnu
         # Install the wheel to ensure it works (but don't need it for PyPI)
-        uv pip install --force-reinstall ../../target/wheels/cypher_guard-*-cp*-*.whl || true
+        WHEEL_FILE=$(find ../../target/wheels/ -name "cypher_guard-*-cp*-*.whl" | head -1)
+        uv pip install --force-reinstall "$WHEEL_FILE" || true
         # Verify only manylinux wheels were created
         ls -la ../../target/wheels/
     
