--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,8 @@ jobs:
         cd rust/python_bindings
         uv sync
         uv run maturin build --release
-        uv pip install --force-reinstall ../../target/wheels/cypher_guard-*-cp*-*.whl
+        WHEEL_FILE=$(find ../../target/wheels/ -name "cypher_guard-*-cp*-*.whl" | head -1)
+        uv pip install --force-reinstall "$WHEEL_FILE"
     
     # Build JavaScript bindings
     - name: Build JavaScript bindings
