--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main, feat/validation-rewrite ]
+    branches: [ main, feat/validation-rewrite, feat/javascript-binding-pullforward ]
   pull_request:
-    branches: [ main, feat/validation-rewrite ]
+    branches: [ main, feat/validation-rewrite, feat/javascript-binding-pullforward ]
 
 env:
   PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
