--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,13 @@ jobs:
         cd rust/python_bindings
         uv sync
         uv run maturin build --release
+        
+        # Debug: List all files in target/wheels/
+        echo "Files in target/wheels/:"
+        ls -la ../../target/wheels/ || echo "target/wheels/ directory not found"
+        
         WHEEL_FILE=$(find ../../target/wheels/ -name "cypher_guard-*-cp*-*.whl" | head -1)
+        echo "Found wheel file: $WHEEL_FILE"
         uv pip install --force-reinstall "$WHEEL_FILE"
     
     # Build JavaScript bindings
@@ -95,8 +101,15 @@ jobs:
         # Copy Rust binaries
         cp target/release/cypher_guard release-assets/cypher_guard-x86_64-unknown-linux-gnu
         
-        # Copy Python wheel  
-        cp target/wheels/*.whl release-assets/
+        # Copy Python wheel (find the actual wheel file)
+        WHEEL_FILE=$(find target/wheels/ -name "cypher_guard-*-cp*-*.whl" | head -1)
+        if [ -n "$WHEEL_FILE" ]; then
+          cp "$WHEEL_FILE" release-assets/
+          echo "wheel_file=$WHEEL_FILE" >> $GITHUB_OUTPUT
+        else
+          echo "No wheel file found!"
+          exit 1
+        fi
         
         # Copy JavaScript package
         cp rust/js_bindings/cypher_guard-*.tgz release-assets/ 2>/dev/null || true
@@ -183,14 +196,18 @@ jobs:
         asset_content_type: application/octet-stream
     
     - name: Upload Python Wheel
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./release-assets/*.whl
-        asset_name: cypher_guard-python.whl
-        asset_content_type: application/zip
+      run: |
+        WHEEL_FILE=$(find ./release-assets/ -name "cypher_guard-*.whl" | head -1)
+        if [ -n "$WHEEL_FILE" ]; then
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: application/zip" \
+            --data-binary @"$WHEEL_FILE" \
+            "${{ steps.create_release.outputs.upload_url }}?name=$(basename "$WHEEL_FILE")"
+        else
+          echo "No wheel file found to upload!"
+          exit 1
+        fi
     
     - name: Upload Evaluation Tool
       uses: actions/upload-release-asset@v1
