--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -18,6 +18,9 @@ jobs:
       contents: read
       packages: write
       id-token: write
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.10', '3.11', '3.12']
     
     steps:
     - uses: actions/checkout@v4
@@ -34,7 +37,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: ${{ matrix.python-version }}
     
     - name: Install uv
       uses: astral-sh/setup-uv@v1
@@ -45,7 +48,7 @@ jobs:
       uses: actions/cache@v3
       with:
         path: rust/python_bindings/.venv
-        key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('rust/python_bindings/uv.lock') }}
+        key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('rust/python_bindings/uv.lock') }}
     
     - name: Install dependencies
       run: cd rust/python_bindings && uv sync
