Fix crate name back to cypher_guard_python to avoid conflicts
- Revert library name from 'cypher_guard' to 'cypher_guard_python'
- Prevents naming conflict with core library
- Follows Rust workspace best practices for distinct crate names

--- a/rust/python_bindings/Cargo.toml
+++ b/rust/python_bindings/Cargo.toml
@@ -4,7 +4,7 @@ version = "4.0.0"
 edition = "2021"
 
 [lib]
-name = "cypher_guard"
+name = "cypher_guard_python"
 crate-type = ["cdylib"]
 
 [dependencies]
