Fix python bindings (#51)
* fix db schema property, fix venv discrepency by updating makefile methods

* fix db schema init

* all python tests pass

* update make file workflows for development

* fix distinct_count in schema import

* rust formatting

* update makefile build-python to only use first wheel file found

* Update CHANGELOG.md

* fix bug in schema unit test where __repr__ assumed dict ordering

* Fix crate name back to cypher_guard_python to avoid conflicts

- Revert library name from 'cypher_guard' to 'cypher_guard_python'
- Prevents naming conflict with core library
- Follows Rust workspace best practices for distinct crate names

---------

Co-authored-by: rfrneo4j <alexander.fournier@neo4j.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "cypher_guard"
 version = "4.0.0"
 description = "Python bindings for Cypher Guard - A Rust library for parsing and validating Cypher queries against a user-defined schema"
-readme = "../../README.md"
+readme = "README.md"
 license = {text = "MIT"}
 authors = [
     {name = "Neo4j Field Team"}
@@ -49,4 +49,5 @@ build-backend = "maturin"
 
 [tool.maturin]
 module-name = "cypher_guard"
+manifest-path = "rust/python_bindings/Cargo.toml"
 manylinux = "2_34" 
